[project]
name = "forgehub"
version = "0.0.1"
description = "Abuse the github acitivity calendar to draw patterns or write messages"
readme = "README.md"
requires-python = "~=3.10"
license = "LICENSE"
authors = [
    {name = "Josh Meranda", email = "joshmeranda@gmail.com"}
]

[project.urls]
Source = "https://github.com/joshmeranda/forgehub"

[build-system]
requires = ["setuptools"]