[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "forgehub"
version = "0.0.1"
description = "Abuse the github activity calendar to draw patterns or write messages"
readme = "README.md"
requires-python = "~=3.10"
license = { file = "LICENSE" }
authors = [
    {name = "Josh Meranda", email = "joshmeranda@gmail.com"}
]

[project.urls]
Source = "https://github.com/joshmeranda/forgehub"

[project.scripts]
forgehub = "forgehub:main"